-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b93
-
Verified
...
Reluctant Repetition : Passed
Multiline Dollar : Passed
Dollar at End : Failed(2)
java.lang.IllegalStateException: No match found
at java.util.regex.Matcher.group(Matcher.java:631)
at java.util.regex.Matcher.group(Matcher.java:590)
at RegExTest.check(RegExTest.java:190)
at RegExTest.check(RegExTest.java:229)
at RegExTest.caretBetweenTerminatorsTest(RegExTest.java:1247)
at RegExTest.main(RegExTest.java:128)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:520)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
at java.lang.Thread.run(Thread.java:747)
Reluctant Repetition : Passed
Multiline Dollar : Passed
Dollar at End : Failed(2)
java.lang.IllegalStateException: No match found
at java.util.regex.Matcher.group(Matcher.java:631)
at java.util.regex.Matcher.group(Matcher.java:590)
at RegExTest.check(RegExTest.java:190)
at RegExTest.check(RegExTest.java:229)
at RegExTest.caretBetweenTerminatorsTest(RegExTest.java:1247)
at RegExTest.main(RegExTest.java:128)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:520)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
at java.lang.Thread.run(Thread.java:747)
- relates to
-
JDK-8054307 JEP 254: Compact Strings
-
- Closed
-