8141443: jdk/test/java/util/regex/RegExTest.java fails: No match found

Do not sign extend when converting jbyte to jchar.

Reviewed-by: shade, kvn